# reusable-testable-arduino-tutorial

./: CMakeLists.txt  README.md
.github/workflows/: firmware-ci.yml
src/Firmware/: ArduinoPinController.cpp  ArduinoPinController.h  Firmware.ino  PinController.h
src/Hardware/: Hardware.cpp  Hardware.h  Hardware.ino
test/: CMakeLists.txt
test/mocks/: MockPinController.hpp
test/ut/: firmware_test.cpp  hardware_test.cpp
